--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       Unit 46 AR Assignment Work
       </H1>
     <p>
-      0.1 Initial 10 lines of code
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.1 initial 10 lines of code.html">0.1 Initial 10 lines of code</a>
     </p>
   </Body>
 </Html>
