--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.1 initial 10 lines of code.html">0.1 Initial 10 lines of code</a>
     </p>
+     <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.2 Experimentation - Sphere.html">0.2 Experimentation - Sphere
+</a>
+    </p>
+    
   </Body>
 </Html>
