--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.1 initial 10 lines of code.html">0.1 Initial 10 lines of code</a>
     </p>
      <p>
-      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.2 Experimentation - Sphere.html">0.2 Experimentation - Sphere
-</a>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.2 Experimentation - Sphere.html">0.2 Experimentation - Sphere </a>
+    </p>
+     <p>
+      <a href="">0.3 </a>
+    </p>
+     <p>
+      <a href="">0.4 </a>
+    </p> <p>
+      <a href="">0.5 </a>
+    </p> <p>
+      <a href="">0.6 </a>
+    </p> <p>
+      <a href="">0.7 </a>
     </p>
     
   </Body>
