--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.2 Experimentation - Sphere.html">0.2 Experimentation - Sphere </a>
     </p>
      <p>
-      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.3 Experimentation - plane.html">0.3 Experimentation - Plane </a>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.3 Experimental - plane.html">0.3 Experimentation - Plane </a>
     </p>
      <p>
       <a href="">0.4 </a>
