--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
      <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.3 Experimental - plane.html">0.3 Experimentation - Plane </a>
     </p>
+    <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.3.1 Experimental - plane with text.html">0.3.1 Experimentation - Plane with text </a>
+    </p>
      <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.4 Experimentation - cylinder.html">0.4 Experimentation - Cylinder </a>
     </p> <p>
