--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.3.1 Experimental - plane with text.html">0.3.1 Experimentation - Plane changed colour with text </a>
     </p>
+    <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.3.2 Experimental - plane with changed text.html">0.3.2 Experimental - plane with changed text.html </a>
+    </p>
      <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.4 Experimentation - cylinder.html">0.4 Experimentation - Cylinder </a>
     </p> <p>
