--- a/0.3.2 Experimental - plane with changed text.html
+++ b/0.3.2 Experimental - plane with changed text.html
@@ -4,8 +4,9 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
 		<a-plane position="0 0 -4" rotation="-0 0 0" width="4" height="4" color="#000000"></a-plane>
-    <a-entity geometry="primitive: plane; height: auto; width: auto"
+    <a-entity geometry="primitive: plane; height: auto; width: auto;"
               material="color: #FFA500"
+	      Position="0 0 -4;"
               text="Width: 4; value: Hello there i hope you're enjoying your day;"></a-entity>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
