Update 0.3.2 Experimental - plane with changed text.html

--- a/0.3.2 Experimental - plane with changed text.html
+++ b/0.3.2 Experimental - plane with changed text.html
@@ -3,7 +3,7 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
-		<a-plane position="0.07167 0.07435 -3.88677" rotation="" width="4" height="4" color="#000000" material="" geometry=""></a-plane>
+		<a-plane position="0.07167 0.07435 -3.88677" rotation="" width="4" height="4" color="#000000"></a-plane>
     <a-entity geometry="primitive: plane; height: 0.046" material="color: #FFA500" text="value: Hello there i hope you're enjoying your day">></a-entity>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
