--- a/0.3.2 Experimental - plane with changed text.html
+++ b/0.3.2 Experimental - plane with changed text.html
@@ -4,7 +4,7 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
 		<a-plane position="0 0 0" rotation="" width="4" height="4" color="#000000"></a-plane>
-    <a-entity geometry="primitive: plane; height: 0.70" position="0 0 0.20" material="color: #FFA500" text="value: Hello there i hope you're enjoying your day"></a-entity>
+    <a-entity text="value: Hello there i hope you're enjoying your day"></a-entity>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
 </body>
