--- a/0.3.2 Experimental - plane with changed text.html
+++ b/0.3.2 Experimental - plane with changed text.html
@@ -3,8 +3,8 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
-		<a-plane position="0 0 0" rotation="" width="4" height="4" color="#000000"></a-plane>
-    <a-entity text="value: Hello there i hope you're enjoying your day"></a-entity>
+		<a-plane position="" rotation="-90 0 0" width="4" height="4" color="#000000" material="" geometry="" scale="1.05 1 1"></a-plane>
+		<a-entity text="value: Hello there i hope you're enjoying your day" position="0.43893 0.3 0" rotation="-90 0 0" scale="4.5 4.5 1"></a-entity>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
 </body>
