--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.3.2 Experimental - plane with changed text.html">0.3.2 Experimental - plane with changed text and positions </a>
     </p>
+    <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.3.3 Experimental - plane with added wall and text.html">0.3.2 Experimental - plane with added walls and text </a>
+    </p>
      <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.4 Experimentation - cylinder.html">0.4 Experimentation - Cylinder </a>
     </p> <p>
