--- a/0.3.3 Experimental - plane with added wall and text.html
+++ b/0.3.3 Experimental - plane with added wall and text.html
@@ -5,10 +5,10 @@
 	<a-scene embedded arjs='sourceType: webcam;'>
 		<a-plane position="" rotation="-90 0 0" width="4" height="4" color="#000000" material="" geometry="" scale="1.05 1 1"></a-plane>
 		<a-entity text="value: Hello there i hope you're enjoying your day" position="0.43893 0.3 0" rotation="-90 0 0" scale="4.5 4.5 1"></a-entity>
-    <a-box position="-1 0.5 -3" rotation="0 45 0" color="#000000"></a-box>
-    <a-box position="-1 0.5 -3" rotation="0 45 0" color="#000000"></a-box>
-    <a-entity text="value: Why are you looking over here?" position="0 0 0" rotation="-90 0 0" scale="4.5 4.5 1"></a-entity>
-    <a-entity text="value: Thank you for noticing me" position="0 0 0" rotation="-90 0 0" scale="4.5 4.5 1"></a-entity>
+    <a-box position="-0.00712 0.44632 -2.51802" rotation="" color="#000000" material="" geometry="" scale="4.2 1 1"></a-box>
+    <a-box position="0.00171 0.46956 1.83479" rotation="" color="#000000" material="" geometry="" scale="4.2 1 1"></a-box>
+    <a-entity text="value: Why are you looking over here?" position="0.69827 1.00978 1.77232" rotation="-90 0 0" scale="4.5 4.5 1"></a-entity>
+    <a-entity text="value: Thank you for noticing me" position="1.08261 0.97068 -2.66454" rotation="-90 0 0" scale="4.5 4.5 1"></a-entity>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
 </body>
