--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.3.2 Experimental - plane with changed text.html">0.3.2 Experimental - plane with changed text and positions </a>
     </p>
     <p>
-      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.3.3 Experimental - plane with added wall and text.html">0.3.2 Experimental - plane with added walls and text </a>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.3.3 Experimental - plane with added wall and text.html">0.3.3 Experimental - plane with added walls and text </a>
+    </p>
+    <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.3.4 Experimental - plane with lights.html">0.3.4 Experimental - plane with lights added </a>
     </p>
      <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.4 Experimentation - cylinder.html">0.4 Experimentation - Cylinder </a>
