Update 0.3.4 Experimental - plane with lights.html

--- a/0.3.4 Experimental - plane with lights.html
+++ b/0.3.4 Experimental - plane with lights.html
@@ -9,8 +9,7 @@
     <a-box position="0.00171 0.46956 1.83479" rotation="" color="#000000" material="" geometry="" scale="4.2 1 1"></a-box>
     <a-entity text="value: Why are you looking over here?" position="0.69827 1.00978 1.77232" rotation="-90 0 0" scale="4.5 4.5 1"></a-entity>
     <a-entity text="value: Thank you for noticing me" position="1.08261 0.97068 -2.66454" rotation="-90 0 0" scale="4.5 4.5 1"></a-entity>
-    <a-entity light="type: spot; angle: 45"></a-entity>
-    <a-entity light="type: spot; angle: -45"></a-entity>
+    <a-entity light="type: point; angle: 0; color: #45e8e5; groundColor: #37ff00; decay: 0; castShadow: true"></a-entity>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
 </body>
