--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.3.4 Experimental - plane with lights.html">0.3.4 Experimental - plane with lights added </a>
     </p>
+    <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.3.5 Experimental - plane with moving shapes.html">0.3.5 Experimental - plane with moving shapes </a>
+    </p>
      <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.4 Experimentation - cylinder.html">0.4 Experimentation - Cylinder </a>
     </p> <p>
