--- a/0.3.5 Experimental - plane with moving shapes.html
+++ b/0.3.5 Experimental - plane with moving shapes.html
@@ -9,7 +9,9 @@
     <a-entity text="value: Why are you looking over here?" position="0.69827 1.00978 1.77232" rotation="-90 0 0" scale="4.5 4.5 1"></a-entity>
     <a-entity text="value: Thank you for noticing me" position="1.08261 0.97068 -2.66454" rotation="-90 0 0" scale="4.5 4.5 1"></a-entity>
     <a-entity light="type: point; angle: 0; color: #45e8e5; groundColor: #37ff00; decay: 0; castShadow: true"></a-entity>
-    <a-cylinder position="-1 1.6 -5" animation="property: position; to: 1 8 -10; dur: 2000; easing: linear; loop: true" color="ffffff"></a-box>
+    <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
+        <a-sphere position="5 0 0" color="mediumseagreen"></a-sphere>
+</a-entity>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
 </body>
