Update 0.3.5 Experimental - plane with moving shapes.html

--- a/0.3.5 Experimental - plane with moving shapes.html
+++ b/0.3.5 Experimental - plane with moving shapes.html
@@ -10,7 +10,8 @@
     <a-entity text="value: Thank you for noticing me" position="1.08261 0.97068 -2.66454" rotation="-90 0 0" scale="4.5 4.5 1"></a-entity>
     <a-entity light="type: point; angle: 0; color: #45e8e5; groundColor: #37ff00; decay: 0; castShadow: true"></a-entity>
     <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
-        <a-sphere position="5 0 0" color="mediumseagreen"></a-sphere>
+    <a-ring color="teal" radius-inner="1" radius-outer="2"></a-ring>
+    <a-sphere position="5 0 0" color="mediumseagreen"></a-sphere>
 </a-entity>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
