--- a/0.3.5 Experimental - plane with moving shapes.html
+++ b/0.3.5 Experimental - plane with moving shapes.html
@@ -6,6 +6,8 @@
 		<a-entity text="value: Hello there i hope you're enjoying your day" position="0.43893 0.3 0" rotation="-90 0 0" scale="4.5 4.5 1"></a-entity>
     <a-box position="-0.00712 0.44632 -2.51802" rotation="" color="#000000" material="" geometry="" scale="4.2 1 1"></a-box>
     <a-box position="0.00171 0.46956 1.83479" rotation="" color="#000000" material="" geometry="" scale="4.2 1 1"></a-box>
+    <a-box position="-0.00712 0.44632 -2.51802" rotation="" color="#A9A9A9" material="" geometry="" scale="4.2 1 1"></a-box>
+    <a-box position="-0.00712 0.44632 -2.51802" rotation="" color="#A9A9A9" material="" geometry="" scale="4.2 1 1"></a-box>
     <a-entity text="value: Why are you looking over here?" position="0.69827 1.00978 1.77232" rotation="-90 0 0" scale="4.5 4.5 1"></a-entity>
     <a-entity text="value: Thank you for noticing me" position="1.08261 0.97068 -2.66454" rotation="-90 0 0" scale="4.5 4.5 1"></a-entity>
     <a-entity light="type: point; angle: 0; color: #45e8e5; groundColor: #37ff00; decay: 0; castShadow: true"></a-entity>
