--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.4 Experimentation - cylinder.html">0.4 Experimentation - Cylinder </a>
     </p> <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.5 Experimentation - sky.html">0.5 Experimentation - Sky </a>
-    </p> <p>
-      <a href="">0.6 </a>
-    </p> <p>
-      <a href="">0.7 </a>
+    </p> 
+     <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.6 Experimenting - working with different shapes.html">0.6 Experimenting with different shapes</a>
     </p>
-    
   </Body>
 </Html>
