--- a/0.6 Experimenting - working with different shapes.html
+++ b/0.6 Experimenting - working with different shapes.html
@@ -3,11 +3,11 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
-		<a-box position='0 0.5 0' color='#000000'></a-box>
-		<a-box position='0 0.5 0' color='#000000'></a-box>
-    <a-cylinder position='0 0.5 0' color='#000000'></a-cylinder>
-    <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#000000"></a-plane>
-    <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+	<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+	<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+    	<a-cylinder position='0 0.5 0' color='#000000'></a-cylinder>
+    	<a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#000000"></a-plane>
+    	<a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
     
     <a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
