--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
      <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.6 Experimenting - working with different shapes.html">0.6 Experimenting with different shapes </a>
     </p>
+    <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.7 Experimentation: images.html">0.6 Experimenting with Images </a>
+    </p>
   </Body>
 </Html>
