--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.6 Experimenting - working with different shapes.html">0.6 Experimenting with different shapes </a>
     </p>
     <p>
-      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.7 Experimentation: images.html">0.6 Experimenting with Images </a>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.7 Experimentation: images.html">0.6 Experimenting with an image </a>
     </p>
   </Body>
 </Html>
