--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.6 Experimenting - working with different shapes.html">0.6 Experimenting with different shapes </a>
     </p>
     <p>
-      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.7 Experimentation: images.html">0.6 Experimenting with an image </a>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.7 Experimentation: images.html">0.7 Experimenting with an image </a>
+    </p>
+     <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.7.1 Experimentation: Adding different image.html">0.7.1 Experimenting with a different image added </a>
     </p>
   </Body>
 </Html>
