--- a/0.7.1 Experimentation: Adding different image.html
+++ b/0.7.1 Experimentation: Adding different image.html
@@ -3,7 +3,7 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
-	<a-image src="SHEF_MSH_location_image_5.jpg"></a-image>
+	<a-image src="Museum.jfif"></a-image>
     <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
