--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.7 Experimentation: images.html">0.7 Experimenting with an image </a>
     </p>
      <p>
-      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.7.1 Experimentation: Adding different image.html">0.7.1 Experimenting with a different image </a>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.7.1 Experimentation: Adding a different image.html">0.7.1 Experimenting with a different image </a>
     </p>
   </Body>
 </Html>
