--- a/0.7.1 Experimentation: Adding a different image.html
+++ b/0.7.1 Experimentation: Adding a different image.html
@@ -3,8 +3,8 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
-    <a-image src="SHEF_MSH_location_image_5.jpg"></a-image>
-	<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+    <a-image src="SHEF_MSH_location_image_5.jpg" material="color: #ffffff" geometry="" scale="7 4 5"></a-image>
+	<a-box position="0 0.67854 0" material="opacity: 0.5; color: #000000" geometry="" scale="7 4 1"></a-box>
 	<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
 </body>
