--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
      <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.7.1 Experimentation: Adding a different image.html">0.7.1 Experimenting with a different image </a>
     </p>
+    <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.7.2 Experimentation: Adding more images.html">0.7.2 Experimenting with added images and blocks </a>
+    </p>
   </Body>
 </Html>
