--- a/0.7.2 Experimentation: Adding more images and some blocks.html
+++ b/0.7.2 Experimentation: Adding more images and some blocks.html
@@ -3,9 +3,9 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
-    <a-image src="SHEF_MSH_location_image_5.jpg" material="color: #ffffff" geometry="" scale="4 2 5" rotation="-90 0 0"></a-image>
-	<a-image src="Expression---Heads-by-Sop-008.jpg" material="" geometry="" rotation="-90 0 -45" scale="4 2 5"></a-image>
-   <a-image src="spike.4ce5cd37.jpg" material="" geometry="" rotation="-90 0 45" scale="4 2 5"></a-image>
+    <a-image src="SHEF_MSH_location_image_5.jpg" position="-0.02 2.66486 0" material="color: #ffffff" geometry="" scale="4 2 5" rotation="-90 0 0"></a-image>
+	<a-image src="Expression---Heads-by-Sop-008.jpg" position="2.8 2.77928 1.65486" material="" geometry="" rotation="-90 0 -45" scale="4 2 5"></a-image>
+   <a-image src="spike.4ce5cd37.jpg" position="-2.87393 2.84664 1.57717" material="" geometry="" rotation="-90 0 45" scale="4 2 5"></a-image>
     <a-box position="-0.02 2.66486 0" material="opacity: 0.5; color: #000000" geometry="" scale="4 2 1.01" rotation="90 0 0"></a-box>
     <a-box position="2.8 2.77928 1.65486" material="opacity: 0.5; color: #000000" geometry="" scale="4 2 1" rotation="90 0 -45"></a-box>
     <a-box position="-2.87393 2.84664 1.57717" material="opacity: 0.5; color: #000000" geometry="" scale="4 2 1" rotation="90 0 45"></a-box>
