--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.7.1 Experimentation: Adding a different image.html">0.7.1 Experimenting with a different image </a>
     </p>
     <p>
-      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.7.2 Experimentation: Adding more images and blocks.html">0.7.2 Experimenting with added images and blocks </a>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.7.2 Experimentation: Adding more images and some blocks.html">0.7.2 Experimenting with added images and blocks </a>
     </p>
   </Body>
 </Html>
