--- a/0.8 Experimentation with video sphere.html
+++ b/0.8 Experimentation with video sphere.html
@@ -3,7 +3,7 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
-<a-videosphere src="africa.mp4"></a-videosphere>
+<a-videosphere src="Video Of Funny Cat.mp4"></a-videosphere>
 </body>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
