--- a/index.html
+++ b/index.html
@@ -44,5 +44,8 @@
     <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.7.2 Experimentation: Adding more images and some blocks.html">0.7.2 Experimenting with added images and blocks </a>
     </p>
+    <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.8 Experimentation with video sphere.html">0.8 Experimenting with the video Sphere </a>
+    </p>
   </Body>
 </Html>
