--- a/index.html
+++ b/index.html
@@ -47,5 +47,8 @@
     <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.8 Experimentation with video sphere.html">0.8 Experimenting with the video Sphere </a>
     </p>
+    <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/0.9 Experimenting: Plane video.html">0.9 Experimenting with plane video </a>
+    </p>
   </Body>
 </Html>
