--- a/0.2 Experimentation - Sphere with new marker.html
+++ b/0.2 Experimentation - Sphere with new marker.html
@@ -4,6 +4,6 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
 		<a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-		<a-marker-camera preset='hiro'></a-marker-camera>
+		<a-marker-camera preset='kanji'></a-marker-camera>
 	</a-scene>
 </body>
