--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <a href="https://reecegriffiths.github.io/Unit-46-AR/0.9 Experimenting: Plane video.html">0.9 Experimenting with plane video </a>
     </p>
     <p>
-      <a href="https://reecegriffiths.github.io/Unit-46-AR/1.0 Assignment work: creating the base code, shapes and images.html">1.0 Assignment work: creating the base code </a>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/1.0 Assignment work: creating the base code, shapes and images.html">1.0 Assignment work: creating the base code, shapes and images </a>
     </p>
   </Body>
 </Html>
