--- a/index.html
+++ b/index.html
@@ -53,5 +53,8 @@
     <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/1.0 Assignment work: creating the base code, shapes and images.html">1.0 Assignment work: creating the base code, shapes and images </a>
     </p>
+    <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/1.1 Assignment work: resizing the shapes and images.html">1.1 Assignment work: resizing the shapes and images </a>
+    </p>
   </Body>
 </Html>
