--- a/index.html
+++ b/index.html
@@ -56,5 +56,8 @@
     <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/1.1 Assignment work: resizing the shapes and the images.html">1.1 Assignment work: resizing the shapes and images </a>
     </p>
+    <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/1.2 Assignment work: Adding text to the shapes.html">1.2 Assignment work: Adding text to the images </a>
+    </p>
   </Body>
 </Html>
