Update and rename 1.2 Assignment work: Adding text to the shapes.html to 1.2 Assignment work: Adding text to the images and shapes behind the text.html

--- a/1.2 Assignment work: Adding text to the images and shapes behind the text.html
+++ b/1.2 Assignment work: Adding text to the images and shapes behind the text.html
@@ -12,6 +12,9 @@
     <a-entity text="Width: 4; value: Hello and welcome to the Weston Park Museum;"></a-entity>
     <a-entity text="Width: 4; value: Meet Spike. Spike is a Woolly Rhino which went extinct 14,000 years ago!;"></a-entity>
     <a-entity text="Width: 4; value: Here we have different types of egyptian items;"></a-entity>
+    <a-box position="-0.02 2.4726 0.01621" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.5 0.25" rotation="90 0 0"></a-box>
+    <a-box position="-0.02 2.4726 0.01621" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.5 0.25" rotation="90 0 0"></a-box>
+    <a-box position="-0.02 2.4726 0.01621" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.5 0.25" rotation="90 0 0"></a-box>
     <a-marker-camera preset='hiro'></a-marker-camera>
-	</a-scene>
+    </a-scene>
 </body>
