--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <a href="https://reecegriffiths.github.io/Unit-46-AR/1.1 Assignment work: resizing the shapes and the images.html">1.1 Assignment work: resizing the shapes and images </a>
     </p>
     <p>
-      <a href="https://reecegriffiths.github.io/Unit-46-AR/1.2 Assignment work: Adding text to the shapes.html">1.2 Assignment work: Adding text to the images </a>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/1.2 Assignment work: Adding text to the images and shapes behind the text.html">1.2 Assignment work: Adding text to the images and shapes behind the text</a>
     </p>
   </Body>
 </Html>
