Update and rename 1.2 Assignment work: Adding text to the images and shapes behind the text.html to 1.2 Assignment work: Adding text to the images and shapes behind the texts.html

--- a/1.2 Assignment work: Adding text to the images and shapes behind the texts.html
+++ b/1.2 Assignment work: Adding text to the images and shapes behind the texts.html
@@ -9,12 +9,12 @@
     <a-box position="-0.02 2.4726 0.01621" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.5 0.25" rotation="90 0 0"></a-box>
     <a-box position="1.04821 2.45326 0.00695" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.5 0.25" rotation="90 0 0"></a-box>
     <a-box position="-1.07709 2.465 -0.01625" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.5 0.25" rotation="90 0 0"></a-box>
-    <a-entity text="Width: 4; value: Hello and welcome to the Weston Park Museum;"></a-entity>
-    <a-entity text="Width: 4; value: Meet Spike. Spike is a Woolly Rhino which went extinct 14,000 years ago!;"></a-entity>
-    <a-entity text="Width: 4; value: Here we have different types of egyptian items;"></a-entity>
-    <a-box position="-0.02 2.4726 0.01621" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.5 0.25" rotation="90 0 0"></a-box>
-    <a-box position="-0.02 2.4726 0.01621" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.5 0.25" rotation="90 0 0"></a-box>
-    <a-box position="-0.02 2.4726 0.01621" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.5 0.25" rotation="90 0 0"></a-box>
+    <a-entity text="value: Hello and welcome to the Weston Park Museum" rotation="-90 0 0"></a-entity>
+    <a-entity text="value: Meet Spike. Spike is a Woolly Rhino which went extinct 14,000 years ago!" rotation="-90 0 0"></a-entity>
+    <a-entity text="value: Here we have different types of egyptian items" rotation="-90 0 0"></a-entity>
+    <a-box position="-1.07421 2.46794 -0.38927" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.25 0.25" rotation="90 0 0"></a-box>
+    <a-box position="-0.02 2.48312 -0.36929" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.25 0.25" rotation="90 0 0"></a-box>
+    <a-box position="-0.02 2.48312 -0.36929" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.25 0.25" rotation="90 0 0"></a-box>
     <a-marker-camera preset='hiro'></a-marker-camera>
-    </a-scene>
+</a-scene>
 </body>
