--- a/index.html
+++ b/index.html
@@ -59,5 +59,8 @@
     <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/1.2 Assignment work: Adding text to the images and shapes behind the text.html">1.2 Assignment work: Adding text to the images and shapes behind the text</a>
     </p>
+    <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/1.3 Assignment work: Adding a video.html">1.3 Assignment work: Adding a video </a>
+    </p>
   </Body>
 </Html>
