--- a/1.3 Assignment work: adding a video.html
+++ b/1.3 Assignment work: adding a video.html
@@ -15,7 +15,7 @@
     <a-box position="-1.07421 2.46794 -0.38927" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.25 0.25" rotation="90 0 0"></a-box>
     <a-box position="1.04899 2.48312 -0.36929" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.25 0.25" rotation="90 0 0"></a-box>
     <a-box position="-0.02 2.48312 -0.36929" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.25 0.25" rotation="90 0 0"></a-box>
-    <a-video src="https://youtu.be/J2CX9xdUZbs"></a-video>
+    <a-video src="https://www.youtube.com/embed/t9ag8NNCzjk"></a-video>
     <a-marker-camera preset='hiro'></a-marker-camera>
 </a-scene>
 </body>
