--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <a href="https://reecegriffiths.github.io/Unit-46-AR/1.3 Assignment work: adding a video.html">1.3 Assignment work: Adding a video</a>
     </p>
      <p>
-      <a href="https://reecegriffiths.github.io/Unit-46-AR/1.4 Assignment work: Adding extra shapes.html">1.4 Assignment work: Adding extra shapes</a>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/1.4 Assignment work: adding extra shapes.html">1.4 Assignment work: Adding extra shapes</a>
     </p>
   </Body>
 </Html>
