--- a/index.html
+++ b/index.html
@@ -65,5 +65,8 @@
      <p>
       <a href="https://reecegriffiths.github.io/Unit-46-AR/1.4 Assignment work: adding extra shapes.html">1.4 Assignment work: Adding extra shapes</a>
     </p>
+    <p>
+      <a href="https://reecegriffiths.github.io/Unit-46-AR/1.5 Assignment work: adding the final parts.html">1.5 Assignment work: Final Product</a>
+    </p>
   </Body>
 </Html>
