--- a/1.5 Assignment work: Adding the final parts.html
+++ b/1.5 Assignment work: Adding the final parts.html
@@ -16,11 +16,9 @@
     <a-box position="1.04899 2.48312 -0.36929" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.25 0.25" rotation="90 0 0"></a-box>
     <a-box position="-0.02 2.48312 -0.36929" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.25 0.25" rotation="90 0 0"></a-box>
     <a-video src="y2mate.com - Creating a bright future for Weston Park Museum_360p.mp4" position="-0.009 2.650 0.550" material="" geometry="" rotation="-90 0 0" scale="1 0.5 0.25"></a-video>
-    <a-box position="-1.07421 2.46794 0.54067" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.5 0.25" rotation="90 0 0"></a-box>
-    <a-box position="1.03073 2.46794 0.53963" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.5 0.25" rotation="90 0 0"></a-box>
     <a-box position="-0.01055 2.46794 0.54889" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.5 0.25" rotation="90 0 0"></a-box>
     <a-marker-camera preset='hiro'></a-marker-camera>
     <a-box position="-0.01055 2.46794 0.54889" material="opacity: 0.5; color: #000000" geometry="" scale="1 0.5 0.25" rotation="90 0 0"></a-box>
-    <a-entity position="-1.034 2.646 -0.369" text="All video rights belong to sheffield museums" rotation="-90 0 0"></a-entity>
+    <a-entity position="0.000 2.657 -0.374" text="value: All video rights belong to sheffield museums" rotation="-90 0 0"></a-entity>
   </a-scene>
 </body>
